--- a/css/general.css
+++ b/css/general.css
@@ -9,7 +9,6 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
